# BlockGame

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  style-guide  vcpkg.json
.github/workflows/: AllTests.yml
assets/shaders/: default.frag  default.vert
core/: Chunk.cpp  Chunk.h  Tilemap.h  Window-Setup.cpp  Window-Setup.h  World.cpp  World.h
core/application/: Application.cpp  Application.h  GameManager.cpp  GameManager.h  Renderer.cpp  Renderer.h  StateManager.cpp  StateManager.h
core/opengl/: Shader.h  Texture.cpp  Texture.h  VBO.cpp  VBO.h
core/states/: GameState.h  TitleState.cpp  TitleState.h
formating-files/: .clang-format  style-guide
header/: Camera.h  Chunk.h  EBO.h  GameVariables.h  Shader.h  Texture.h  VAO.h  VBO.h  Window-Setup.h  WindowSetup.h  World.h
include/: Chunk.h  EBO.h  GameVariables.h  Texture.h  VAO.h  VBO.h  WindowSetup.h  gameVariables.h  shader.h  windowSetup.h
resources/: Cube Vertices
resources/shaders/: default.frag  default.vert
shaders/: default.frag
source/: Camera.cpp  Chunk.cpp  EBO.cpp  Texture.cpp  VAO.cpp  VBO.cpp  World.cpp
src/: CMakeLists.txt  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  EBO.cpp  Player.cpp  Player.h  Shader.cpp  Texture.cpp  Tilemap.cpp  Tilemap.h  VAO.cpp  VBO.cpp  Window-Setup.cpp  WindowSetup.cpp  World.cpp  World.h  shader.cpp  shaderClass.cpp  windowSetup.cpp
src/application/: Application.cpp  Application.h  Renderer.cpp  Renderer.h  StateManager.cpp  StateManager.h
src/core/: Application.cpp  Application.h
src/entities/: Player.cpp  Player.h
src/managers/: StateManager.cpp  StateManager.h  ThreadManager.cpp  ThreadManager.h
src/opengl/: EBO.cpp  EBO.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/rendering/: Camera.h  ChunkMesh.cpp  ChunkMesh.h  Renderer.cpp  Renderer.h  Sun.cpp  Sun.h
src/states/: DefaultState.h  GameState.cpp  GameState.h  TitleState.cpp  TitleState.h  WorldSelectState.cpp  WorldSelectState.h
src/world/: Chunk.cpp  Chunk.h  Cube.cpp  Cube.h  World.cpp  World.h  WorldGeneration.cpp  WorldGeneration.h
tests/: ApplicationFixture.cpp  ApplicationFixture.h  CMakeLists.txt  TestApplication.cpp  TestChunk.cpp
